--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,11 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
-dnl Copyright 2006, 2007 Board of Trustees, Leland Stanford Jr. University
-dnl See README for licensing terms.
+dnl Written by Russ Allbery <rra@stanford.edu>
+dnl Copyright 2006, 2007, 2009
+dnl     Board of Trustees, Leland Stanford Jr. University
+dnl
+dnl See LICENSE for licensing terms.
 
-AC_REVISION([$Revision$])
 AC_PREREQ([2.60])
 AC_INIT([krb5-strength], [0.5], [rra@stanford.edu])
 AC_CONFIG_AUX_DIR([tools])
