Add heimdal-strength, a program to do Heimdal external checks
Add heimdal-strength, a program that checks password strength using
the protocol for a Heimdal external check program.

This program gets the dictionary path from a krb5.conf option, so the
build now depends on Kerberos.

--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,13 @@ plugin_passwd_strength_la_SOURCES = plugin/api.c
 plugin_passwd_strength_la_LDFLAGS = -module -avoid-version
 plugin_passwd_strength_la_LIBADD = cracklib/libcracklib.la
 
+# The Heimdal external-check program.
+bin_PROGRAMS = plugin/heimdal-strength
+plugin_heimdal_strength_CFLAGS = $(AM_CFLAGS)
+plugin_heimdal_strength_SOURCES = plugin/api.c plugin/api.h \
+	plugin/heimdal-strength.c
+plugin_heimdal_strength_LDADD = cracklib/libcracklib.la $(KRB5_LIBS)
+
 # Handle the standard stuff that make maintainer-clean should probably remove
 # but doesn't.  This breaks the GNU coding standard, but in this area the GNU
 # coding standard is dumb.
