--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,8 @@ AC_PROG_INSTALL
 AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
+RRA_LIB_KRB5
+
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_HEADER([config.h])
 AC_OUTPUT
