Add a test suite
Add a test suite using the driver and library from C TAP Harness 1.1.

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 /m4/
 /plugin/heimdal-strength
 /stamp-h1
+/tests/data/.placeholder
+/tests/data/dictionary.*
+/tests/runtests
 .deps/
 .dirstamp
 .libs/
