Add a basic portability library
Add a basic portability library that ensures that functions like snprintf
and strlcpy are available, since I want to use them in the plugin code.
Synchronized with rra-c-util 2.1.

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,12 @@
 /stamp-h1
 /tests/data/.placeholder
 /tests/data/dictionary.*
+/tests/portable/asprintf-t
+/tests/portable/snprintf-t
+/tests/portable/strlcat-t
+/tests/portable/strlcpy-t
 /tests/runtests
+/tests/tap/libtap.a
 .deps/
 .dirstamp
 .libs/
