--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,11 @@ AC_TYPE_LONG_LONG_INT
 RRA_FUNC_SNPRINTF
 AC_REPLACE_FUNCS([asprintf strlcat strlcpy])
 
+save_LIBS="$LIBS"
+AC_SEARCH_LIBS([dlopen], [dl], [DL_LIBS="$LIBS"])
+LIBS="$save_LIBS"
+AC_SUBST([DL_LIBS])
+
 RRA_LIB_KRB5
 
 RRA_LIB_KRB5_SWITCH
