Add new plugin API for MIT Kerberos
Add a new plugin API for MIT Kerberos modelled after the plugin API
used for other MIT Kerberos plugins.  Thanks to Marcus Watts for
substantial research and contributions to the interface design.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tests/data/.placeholder
 /tests/data/dictionary.*
 /tests/heimdal/plugin
+/tests/mit/plugin
 /tests/portable/asprintf-t
 /tests/portable/snprintf-t
 /tests/portable/strlcat-t
