--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: krb5-strength
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 7.0.50~)
+Build-Depends: debhelper (>= 7.0.50~), libkrb5-dev
 Standards-Version: 3.8.4
 
 Package: krb5-strength
