Link the plugin with the Kerberos libraries

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,7 +40,7 @@ module_LTLIBRARIES = plugin/passwd_strength.la
 plugin_passwd_strength_la_SOURCES = plugin/api.c plugin/heimdal.c plugin/mit.c
 plugin_passwd_strength_la_LDFLAGS = -module -avoid-version
 plugin_passwd_strength_la_LIBADD = cracklib/libcracklib.la \
-	portable/libportable.la
+	portable/libportable.la $(KRB5_LIBS)
 
 # The Heimdal external-check program.
 bin_PROGRAMS = external/heimdal-strength
