--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,9 @@ Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
 Build-Depends: debhelper (>= 7.0.50~), libkrb5-dev
 Standards-Version: 3.8.4
+Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
+Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git
+Vcs-Browser: http://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
 Architecture: any
