--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl Written by Russ Allbery <rra@stanford.edu>
-dnl Copyright 2006, 2007, 2009, 2010
-dnl     Board of Trustees, Leland Stanford Jr. University
+dnl Copyright 2006, 2007, 2009, 2010, 2012
+dnl     The Board of Trustees of the Leland Stanford Junior University
 dnl
 dnl See LICENSE for licensing terms.
 
@@ -11,7 +11,8 @@ AC_INIT([krb5-strength], [1.0], [rra@stanford.edu])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_LIBOBJ_DIR([portable])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([1.11 check-news silent-rules -Wall -Werror])
+AM_INIT_AUTOMAKE([1.11 check-news foreign silent-rules subdir-objects \
+    -Wall -Werror])
 AM_MAINTAINER_MODE
 
 AC_PROG_CC
@@ -25,6 +26,8 @@ AC_HEADER_STDBOOL
 AC_CHECK_HEADERS([sys/bittypes.h])
 AC_CHECK_DECLS([snprintf, vsnprintf])
 AC_TYPE_LONG_LONG_INT
+AC_CHECK_TYPES([ssize_t], [], [],
+    [#include <sys/types.h>])
 AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
@@ -40,7 +43,7 @@ RRA_LIB_CRACKLIB
 RRA_LIB_KRB5
 RRA_LIB_KRB5_SWITCH
 AC_CHECK_HEADERS([kadm5-pwcheck.h krb5/pwcheck_plugin.h])
-AC_CHECK_TYPES([krb5_realm], , , [#include <krb5.h>])
+AC_CHECK_TYPES([krb5_realm], [], [], [RRA_INCLUDES_KRB5])
 RRA_LIB_KRB5_RESTORE
 
 dnl Create the tests/data directory for builds outside the source directory.
