--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: krb5-strength
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), libkrb5-dev
+Build-Depends: debhelper (>= 8), libkrb5-dev
 Standards-Version: 3.8.4
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git
