--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: krb5-strength
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
+Bugs: mailto:rra@debian.org
 Build-Depends: debhelper (>= 8), libkrb5-dev
 Standards-Version: 3.8.4
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
