--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl
 dnl Written by Russ Allbery <rra@stanford.edu>
-dnl Copyright 2006, 2007, 2009, 2010, 2012
+dnl Copyright 2006, 2007, 2009, 2010, 2012, 2013
 dnl     The Board of Trustees of the Leland Stanford Junior University
 dnl
 dnl See LICENSE for licensing terms.
@@ -11,16 +11,30 @@ AC_INIT([krb5-strength], [1.1], [rra@stanford.edu])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_LIBOBJ_DIR([portable])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([1.11 check-news foreign silent-rules subdir-objects \
+AM_INIT_AUTOMAKE([1.11 check-news dist-xz foreign silent-rules subdir-objects
     -Wall -Werror])
 AM_MAINTAINER_MODE
 
 AC_PROG_CC
 AC_USE_SYSTEM_EXTENSIONS
+AC_SYS_LARGEFILE
 AM_PROG_CC_C_O
 AC_PROG_INSTALL
+m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
+
+RRA_LIB_CRACKLIB
+RRA_LIB_KRB5
+RRA_LIB_KRB5_SWITCH
+AC_CHECK_HEADERS([kadm5-pwcheck.h krb5/pwcheck_plugin.h])
+AC_CHECK_TYPES([krb5_realm], [], [], [RRA_INCLUDES_KRB5])
+RRA_LIB_KRB5_RESTORE
+
+save_LIBS="$LIBS"
+AC_SEARCH_LIBS([dlopen], [dl], [DL_LIBS="$LIBS"])
+LIBS="$save_LIBS"
+AC_SUBST([DL_LIBS])
 
 AC_HEADER_STDBOOL
 AC_CHECK_HEADERS([sys/bittypes.h])
@@ -31,20 +45,10 @@ AC_CHECK_TYPES([ssize_t], [], [],
 AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
+AC_CHECK_TYPES([ssize_t], [], [],
+    [#include <sys/types.h>])
 RRA_FUNC_SNPRINTF
 AC_REPLACE_FUNCS([asprintf strlcat strlcpy])
-
-save_LIBS="$LIBS"
-AC_SEARCH_LIBS([dlopen], [dl], [DL_LIBS="$LIBS"])
-LIBS="$save_LIBS"
-AC_SUBST([DL_LIBS])
-
-RRA_LIB_CRACKLIB
-RRA_LIB_KRB5
-RRA_LIB_KRB5_SWITCH
-AC_CHECK_HEADERS([kadm5-pwcheck.h krb5/pwcheck_plugin.h])
-AC_CHECK_TYPES([krb5_realm], [], [], [RRA_INCLUDES_KRB5])
-RRA_LIB_KRB5_RESTORE
 
 dnl Create the tests/data directory for builds outside the source directory.
 AC_CONFIG_COMMANDS([tests/data/.placeholder], [touch tests/data/.placeholder])
