Add support for new MIT plugin interface, drop old patch
Add support for the MIT Kerberos password quality plugin interface,
available in MIT Kerberos 1.9 and later, contributed by Greg Hudson
and MIT.  Drop the patch for MIT Kerberos 1.4 (and hence support for
versions of MIT Kerberos prior to 1.9).

--- a/Makefile.am
+++ b/Makefile.am
@@ -43,7 +43,8 @@ endif
 
 # Rules for building the password strength plugin.
 module_LTLIBRARIES = plugin/passwd_strength.la
-plugin_passwd_strength_la_SOURCES = plugin/api.c plugin/heimdal.c plugin/mit.c
+plugin_passwd_strength_la_SOURCES = plugin/api.c plugin/heimdal.c \
+	plugin/mit.c
 plugin_passwd_strength_la_LDFLAGS = -module -avoid-version
 if EMBEDDED_CRACKLIB
     plugin_passwd_strength_la_LIBADD = cracklib/libcracklib.la
