Import the util layer from rra-c-util, use for heimdal-strength
Rather than rolling our own versions of xmalloc, xstrdup, and die,
import the util layer and use the standard versions of those
functions.  Also import the test suite.

--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,12 @@
 /tests/portable/strlcpy-t
 /tests/runtests
 /tests/tap/libtap.a
+/tests/util/messages-t
+/tests/util/xmalloc
 .deps/
 .dirstamp
 .libs/
+*.a
 *.lo
 *.la
 *.o
