--- a/configure.ac
+++ b/configure.ac
@@ -46,11 +46,11 @@ AC_SUBST([DL_LIBS])
 
 dnl Checks for basic C functionality.
 AC_HEADER_STDBOOL
-AC_CHECK_HEADERS([sys/bittypes.h])
+AC_CHECK_HEADERS([sys/bittypes.h syslog.h])
 AC_CHECK_DECLS([snprintf, vsnprintf])
+RRA_C_C99_VAMACROS
+RRA_C_GNU_VAMACROS
 AC_TYPE_LONG_LONG_INT
-AC_CHECK_TYPES([ssize_t], [], [],
-    [#include <sys/types.h>])
 AC_TYPE_UINT8_T
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
